:sparkles: New game mode & more